fixed css so scrollable area was not overflowing course details component

--- a/FrontEnd/src/app/home/details/details.component.scss
+++ b/FrontEnd/src/app/home/details/details.component.scss
@@ -4,7 +4,8 @@
 	display: flex;
 	flex-direction: column;
 	background-color: #F8FAFC;
-	padding: 2% 0 1% 0;
+	//height: 200px;
+	//padding: 2% 0 1% 0;
 	box-sizing: border-box;
 	border-radius: 5px;
 	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
@@ -18,8 +19,8 @@
 
 .details_inner_box-card {
 	height: 100%;
-	max-height: 40vh;
-	min-height: 40vh;
+	/*max-height: 40vh;
+	min-height: 40vh;*/
 	display: flex;
 	flex-direction: column;
 	//background-color: #D9EAFD;
@@ -87,11 +88,11 @@
 /* ----------- content area --------------------------------------------- */
 
 .edit-scroll-container {
-	flex: none;
-	max-height: 78vh;
-	min-height: 78vh;
-	overflow-y: auto;
-	display: flex;
+	//flex: none;
+	max-height: 60px;
+	/*min-height: 20vh;*/
+	overflow-y: scroll;
+	display: block;
 	flex-direction: column;
 	padding: 10px;
 	//gap: 10px;
